--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "io.cordova.hellocordova",
-  "displayName": "HelloCordova",
-  "version": "1.0.0",
-  "description": "A sample Apache Cordova application that responds to the deviceready event.",
+  "name": "io.cordova.hanami",
+  "displayName": "Hanami",
+  "version": "1.0.1",
+  "description": "Hanami App Prueba - Prog 4.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "ecosystem:cordova"
@@ -14,12 +14,97 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^13.0.0",
-    "cordova-browser": "^7.0.0"
+    "nodemon": "^3.1.3"
   },
   "cordova": {
     "platforms": [
-      "browser",
       "android"
     ]
+  },
+  "dependencies": {
+    "abbrev": "^2.0.0",
+    "android-versions": "^2.0.0",
+    "ansi": "^0.3.1",
+    "assert-plus": "^1.0.0",
+    "axios": "^1.7.2",
+    "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
+    "big-integer": "^1.6.52",
+    "bplist-parser": "^0.3.2",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.3",
+    "concat-map": "^0.0.1",
+    "cordova-common": "^5.0.0",
+    "cross-spawn": "^7.0.3",
+    "dedent": "^1.5.3",
+    "elementtree": "^0.1.7",
+    "endent": "^2.1.0",
+    "execa": "^5.1.1",
+    "express": "^4.19.2",
+    "extsprintf": "^1.4.1",
+    "fast-glob": "^3.3.2",
+    "fast-json-parse": "^1.0.3",
+    "fastq": "^1.17.1",
+    "fill-range": "^7.1.1",
+    "fs-extra": "^11.2.0",
+    "fs.realpath": "^1.0.0",
+    "get-stream": "^6.0.1",
+    "glob": "^7.2.3",
+    "glob-parent": "^5.1.2",
+    "graceful-fs": "^4.2.11",
+    "human-signals": "^2.1.0",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "is-path-inside": "^3.0.3",
+    "is-stream": "^2.0.1",
+    "isexe": "^3.1.1",
+    "jsonfile": "^6.1.0",
+    "lodash": "^4.17.21",
+    "lodash.assign": "^4.2.0",
+    "lodash.isdate": "^4.0.1",
+    "lodash.isobject": "^3.0.2",
+    "lodash.zip": "^4.2.0",
+    "merge-stream": "^2.0.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.7",
+    "mimic-fn": "^2.1.0",
+    "minimatch": "^3.1.2",
+    "morgan": "^1.10.0",
+    "nopt": "^7.2.1",
+    "npm-run-path": "^4.0.1",
+    "objectorarray": "^1.0.5",
+    "once": "^1.4.0",
+    "onetime": "^5.1.2",
+    "p-finally": "^1.0.0",
+    "p-try": "^2.2.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "picomatch": "^2.3.1",
+    "pify": "^4.0.1",
+    "plist": "^3.1.0",
+    "properties-parser": "^0.6.0",
+    "q": "^1.5.1",
+    "queue-microtask": "^1.2.3",
+    "read-chunk": "^3.2.0",
+    "reusify": "^1.0.4",
+    "run-parallel": "^1.2.0",
+    "sax": "^1.1.4",
+    "semver": "^7.6.2",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "signal-exit": "^3.0.7",
+    "string-argv": "^0.3.2",
+    "strip-bom": "^4.0.0",
+    "strip-final-newline": "^2.0.0",
+    "to-regex-range": "^5.0.1",
+    "universalify": "^2.0.1",
+    "untildify": "^4.0.0",
+    "which": "^4.0.0",
+    "with-open-file": "^0.1.7",
+    "wrappy": "^1.0.2",
+    "xmlbuilder": "^15.1.1"
   }
 }
