--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "string-argv": "^0.3.2",
     "strip-bom": "^4.0.0",
     "strip-final-newline": "^2.0.0",
+    "sweetalert2": "^11.12.0",
     "to-regex-range": "^5.0.1",
     "universalify": "^2.0.1",
     "untildify": "^4.0.0",
