Union Front-Back

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "braces": "^3.0.3",
     "concat-map": "^0.0.1",
     "cordova-common": "^5.0.0",
+    "cors": "^2.8.5",
     "cross-spawn": "^7.0.3",
     "dedent": "^1.5.3",
     "elementtree": "^0.1.7",
@@ -73,6 +74,7 @@
     "mimic-fn": "^2.1.0",
     "minimatch": "^3.1.2",
     "morgan": "^1.10.0",
+    "mysql2": "^3.10.2",
     "nopt": "^7.2.1",
     "npm-run-path": "^4.0.1",
     "objectorarray": "^1.0.5",
@@ -99,7 +101,6 @@
     "string-argv": "^0.3.2",
     "strip-bom": "^4.0.0",
     "strip-final-newline": "^2.0.0",
-    "sweetalert2": "^11.12.0",
     "to-regex-range": "^5.0.1",
     "universalify": "^2.0.1",
     "untildify": "^4.0.0",
